--- a/docs/docs/concepts/roots.mdx
+++ b/docs/docs/concepts/roots.mdx
@@ -1,65 +1,65 @@
 ---
-title: "Roots"
-description: "Understanding roots in MCP"
+title: "根路径"
+description: "理解 MCP 中的根路径概念"
 ---
 
-Roots are a concept in MCP that define the boundaries where servers can operate. They provide a way for clients to inform servers about relevant resources and their locations.
+根路径（Roots）是 MCP 中定义服务器操作边界的概念。它为客户提供了一种向服务器声明相关资源及其位置的机制。
 
-## What are Roots?
+## 什么是根路径？
 
-A root is a URI that a client suggests a server should focus on. When a client connects to a server, it declares which roots the server should work with. While primarily used for filesystem paths, roots can be any valid URI including HTTP URLs.
+根路径是客户端建议服务器应关注的统一资源标识符（URI）。当客户端连接服务器时，会声明服务器应处理的根路径集合。虽然主要应用于文件系统路径，但根路径可以是任何有效的 URI（包括 HTTP 网址）。
 
-For example, roots could be:
+例如，根路径可以是：
 
 ```
 file:///home/user/projects/myapp
 https://api.example.com/v1
 ```
 
-## Why Use Roots?
+## 为何使用根路径？
 
-Roots serve several important purposes:
+根路径具有以下核心价值：
 
-1. **Guidance**: They inform servers about relevant resources and locations
-2. **Clarity**: Roots make it clear which resources are part of your workspace
-3. **Organization**: Multiple roots let you work with different resources simultaneously
+1. **引导作用**：向服务器指明相关资源及其位置
+2. **清晰界定**：明确标识工作空间包含的资源范围
+3. **多任务管理**：通过多个根路径同时处理不同资源
 
-## How Roots Work
+## 工作原理
 
-When a client supports roots, it:
+支持根路径的客户端会：
 
-1. Declares the `roots` capability during connection
-2. Provides a list of suggested roots to the server
-3. Notifies the server when roots change (if supported)
+1. 在连接时声明 `roots` 能力
+2. 向服务器提供建议的根路径列表
+3. 当根路径变更时通知服务器（如支持该功能）
 
-While roots are informational and not strictly enforcing, servers should:
+虽然根路径属于参考性声明而非强制约束，但服务器应当：
 
-1. Respect the provided roots
-2. Use root URIs to locate and access resources
-3. Prioritize operations within root boundaries
+1. 遵循提供的根路径范围
+2. 使用根路径 URI 定位和访问资源
+3. 优先处理根路径边界内的操作
 
-## Common Use Cases
+## 典型应用场景
 
-Roots are commonly used to define:
+根路径常用于定义：
 
-- Project directories
-- Repository locations
-- API endpoints
-- Configuration locations
-- Resource boundaries
+- 项目目录
+- 代码仓库位置
+- API 端点
+- 配置文件位置
+- 资源边界
 
-## Best Practices
+## 最佳实践
 
-When working with roots:
+使用根路径时建议：
 
-1. Only suggest necessary resources
-2. Use clear, descriptive names for roots
-3. Monitor root accessibility
-4. Handle root changes gracefully
+1. 仅声明必要的资源路径
+2. 采用清晰易懂的命名规范
+3. 持续监控根路径可访问性
+4. 优雅处理根路径变更情况
 
-## Example
+## 示例
 
-Here's how a typical MCP client might expose roots:
+以下是 MCP 客户端声明根路径的典型配置：
 
 ```json
 {
@@ -76,4 +76,4 @@ Here's how a typical MCP client might expose roots:
 }
 ```
 
-This configuration suggests the server focus on both a local repository and an API endpoint while keeping them logically separated.
+该配置建议服务器同时关注本地代码仓库和 API 端点，并保持两者的逻辑隔离。
