--- a/docs/docs/concepts/transports.mdx
+++ b/docs/docs/concepts/transports.mdx
@@ -57,7 +57,7 @@ stdio传输通过标准输入输出流实现通信，特别适用于本地集成
 - 实现本地集成
 - 需要简单的进程间通信
 - 与shell脚本配合使用
-
+<Tabs>
   <Tab title="TypeScript (Server)">
     ```typescript
     const server = new Server({
