--- a/docs/quickstart/user.mdx
+++ b/docs/quickstart/user.mdx
@@ -144,6 +144,7 @@ Claude for Desktop will run the commands in the configuration file with the perm
 ```bash
 npx -y @modelcontextprotocol/server-filesystem /Users/username/Desktop /Users/username/Downloads
 ```
+<Accordion>
 <Tabs>
 <Tab title="MacOS/Linux">
 </Tab>
@@ -158,6 +159,7 @@ npx -y @modelcontextprotocol/server-filesystem C:\Users\username\Desktop C:\User
 # Check Claude's logs for errors
 tail -n 20 -f ~/Library/Logs/Claude/mcp*.log
 ```
+<Accordion>
 <Tabs>
 <Tab title="MacOS/Linux">
 </Tab>
@@ -199,9 +201,6 @@ npm install -g npm
 The `npx` command may continue to fail if you have not installed NPM globally. If NPM is already installed globally, you will find `%APPDATA%\npm` exists on your system. If not, you can install NPM globally by running the following command:
 
 </Warning>
-
-</Accordion>
-</AccordionGroup>
 
 ## 后续步骤
 <CardGroup cols={2}>
