--- a/docs/specification/2024-11-05/basic/utilities/progress.mdx
+++ b/docs/specification/2024-11-05/basic/utilities/progress.mdx
@@ -1,22 +1,18 @@
 ---
-title: Progress
+title: 进度追踪
 weight: 30
 ---
 
-<Info>**Protocol Revision**: 2024-11-05</Info>
+<Info>**协议修订版本**：2024-11-05</Info>
 
-The Model Context Protocol (MCP) supports optional progress tracking for long-running
-operations through notification messages. Either side can send progress notifications to
-provide updates about operation status.
+Model Context Protocol (MCP) 通过通知消息为长时间运行的操作提供可选的进度追踪功能。通信双方均可发送进度通知来更新操作状态。
 
-## Progress Flow
+## 进度流程
 
-When a party wants to _receive_ progress updates for a request, it includes a
-`progressToken` in the request metadata.
+当一方需要接收请求的进度更新时，应在请求元数据中包含一个 `progressToken`。
 
-- Progress tokens **MUST** be a string or integer value
-- Progress tokens can be chosen by the sender using any means, but **MUST** be unique
-  across all active requests.
+- 进度令牌**必须**为字符串或整数值
+- 发送方可采用任意方式生成进度令牌，但**必须**确保所有活跃请求间的令牌唯一性
 
 ```json
 {
@@ -31,11 +27,11 @@ When a party wants to _receive_ progress updates for a request, it includes a
 }
 ```
 
-The receiver **MAY** then send progress notifications containing:
+接收方随后**可以**发送包含以下内容的进度通知：
 
-- The original progress token
-- The current progress value so far
-- An optional "total" value
+- 原始进度令牌
+- 当前累计进度值
+- 可选的"总量"值
 
 ```json
 {
@@ -49,21 +45,20 @@ The receiver **MAY** then send progress notifications containing:
 }
 ```
 
-- The `progress` value **MUST** increase with each notification, even if the total is
-  unknown.
-- The `progress` and the `total` values **MAY** be floating point.
+- `progress` 值**必须**随每次通知递增（即使总量未知）
+- `progress` 和 `total` 值**可以**是浮点数
 
-## Behavior Requirements
+## 行为规范
 
-1. Progress notifications **MUST** only reference tokens that:
+1. 进度通知**必须**仅引用符合以下条件的令牌：
 
-   - Were provided in an active request
-   - Are associated with an in-progress operation
+   - 来自活跃请求
+   - 关联正在执行的操作
 
-2. Receivers of progress requests **MAY**:
-   - Choose not to send any progress notifications
-   - Send notifications at whatever frequency they deem appropriate
-   - Omit the total value if unknown
+2. 进度请求的接收方**可以**：
+   - 选择不发送任何进度通知
+   - 按自定频率发送通知
+   - 在总量未知时省略该值
 
 ```mermaid
 sequenceDiagram
@@ -84,8 +79,8 @@ sequenceDiagram
     Receiver->>Sender: Method response
 ```
 
-## Implementation Notes
+## 实现说明
 
-- Senders and receivers **SHOULD** track active progress tokens
-- Both parties **SHOULD** implement rate limiting to prevent flooding
-- Progress notifications **MUST** stop after completion
+- 通信双方**应当**追踪活跃的进度令牌
+- 双方**应当**实施速率限制防止消息洪泛
+- 操作完成后**必须**停止发送进度通知
