--- a/docs/specification/2024-11-05/index.mdx
+++ b/docs/specification/2024-11-05/index.mdx
@@ -1,130 +1,109 @@
 ---
-title: Specification
+title: 技术规范
 ---
 
-[Model Context Protocol](https://modelcontextprotocol.io) (MCP) is an open protocol that
-enables seamless integration between LLM applications and external data sources and
-tools. Whether you're building an AI-powered IDE, enhancing a chat interface, or creating
-custom AI workflows, MCP provides a standardized way to connect LLMs with the context
-they need.
+[模型上下文协议](https://modelcontextprotocol.io)（MCP）是一个开放协议，旨在实现大模型应用与外部数据源及工具的无缝集成。无论您正在构建AI驱动的IDE、增强聊天界面，还是创建定制化AI工作流，MCP都提供了一种标准化方式，将大模型与其所需的上下文连接起来。
 
-This specification defines the authoritative protocol requirements, based on the
-TypeScript schema in
-[schema.ts](https://github.com/modelcontextprotocol/specification/blob/main/schema/2024-11-05/schema.ts).
+本规范基于[schema.ts](https://github.com/modelcontextprotocol/specification/blob/main/schema/2024-11-05/schema.ts)中的TypeScript模式，定义了权威的协议要求。
 
-For implementation guides and examples, visit
-[modelcontextprotocol.io](https://modelcontextprotocol.io).
+具体实现指南和示例请访问[modelcontextprotocol.io](https://modelcontextprotocol.io)。
 
-The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD
-NOT", "RECOMMENDED", "NOT RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be
-interpreted as described in [BCP 14](https://datatracker.ietf.org/doc/html/bcp14)
-[[RFC2119](https://datatracker.ietf.org/doc/html/rfc2119)]
-[[RFC8174](https://datatracker.ietf.org/doc/html/rfc8174)] when, and only when, they
-appear in all capitals, as shown here.
+本文档中的关键词"MUST"、"MUST NOT"、"REQUIRED"、"SHALL"、"SHALL NOT"、"SHOULD"、"SHOULD NOT"、"RECOMMENDED"、"NOT RECOMMENDED"、"MAY"和"OPTIONAL"应按照[BCP 14](https://datatracker.ietf.org/doc/html/bcp14)[[RFC2119](https://datatracker.ietf.org/doc/html/rfc2119)][[RFC8174](https://datatracker.ietf.org/doc/html/rfc8174)]中的描述进行解释，且仅当这些词汇以全大写形式出现时（如本文所示）才具有特殊含义。
 
-## Overview
+## 概述
 
-MCP provides a standardized way for applications to:
+MCP为应用程序提供了以下标准化方式：
 
-- Share contextual information with language models
-- Expose tools and capabilities to AI systems
-- Build composable integrations and workflows
+- 与大模型共享上下文信息
+- 向AI系统暴露工具和能力
+- 构建可组合的集成和工作流
 
-The protocol uses [JSON-RPC](https://www.jsonrpc.org/) 2.0 messages to establish
-communication between:
+该协议使用[JSON-RPC](https://www.jsonrpc.org/) 2.0消息建立以下组件间的通信：
 
-- **Hosts**: LLM applications that initiate connections
-- **Clients**: Connectors within the host application
-- **Servers**: Services that provide context and capabilities
+- **主机**：发起连接的LLM应用程序
+- **客户端**：主机应用程序内的连接器
+- **服务端**：提供上下文和能力的服务
 
-MCP takes some inspiration from the
-[Language Server Protocol](https://microsoft.github.io/language-server-protocol/), which
-standardizes how to add support for programming languages across a whole ecosystem of
-development tools. In a similar way, MCP standardizes how to integrate additional context
-and tools into the ecosystem of AI applications.
+MCP部分灵感来源于[语言服务器协议](https://microsoft.github.io/language-server-protocol/)，后者标准化了如何在整个开发工具生态系统中添加编程语言支持。类似地，MCP标准化了如何将额外上下文和工具集成到AI应用生态系统中。
 
-## Key Details
+## 核心细节
 
-### Base Protocol
+### 基础协议
 
-- [JSON-RPC](https://www.jsonrpc.org/) message format
-- Stateful connections
-- Server and client capability negotiation
+- [JSON-RPC](https://www.jsonrpc.org/)消息格式
+- 有状态连接
+- 服务端与客户端能力协商
 
-### Features
+### 功能特性
 
-Servers offer any of the following features to clients:
+服务端可向客户端提供以下任意功能：
 
-- **Resources**: Context and data, for the user or the AI model to use
-- **Prompts**: Templated messages and workflows for users
-- **Tools**: Functions for the AI model to execute
+- **资源**：供用户或AI模型使用的上下文数据
+- **提示词**：面向用户的模板化消息和工作流
+- **工具**：供AI模型执行的函数
 
-Clients may offer the following feature to servers:
+客户端可向服务端提供以下功能：
 
-- **Sampling**: Server-initiated agentic behaviors and recursive LLM interactions
+- **采样**：服务端发起的自主行为与递归式LLM交互
 
-### Additional Utilities
+### 附加功能
 
-- Configuration
-- Progress tracking
-- Cancellation
-- Error reporting
-- Logging
+- 配置管理
+- 进度追踪
+- 操作取消
+- 错误报告
+- 日志记录
 
-## Security and Trust & Safety
+## 安全与信任保障
 
-The Model Context Protocol enables powerful capabilities through arbitrary data access
-and code execution paths. With this power comes important security and trust
-considerations that all implementors must carefully address.
+模型上下文协议通过任意数据访问和代码执行路径实现了强大能力。这种能力伴随着重要的安全和信任考量，所有实现者都必须谨慎处理。
 
-### Key Principles
+### 核心原则
 
-1. **User Consent and Control**
+1. **用户授权与控制**
 
-   - Users must explicitly consent to and understand all data access and operations
-   - Users must retain control over what data is shared and what actions are taken
-   - Implementors should provide clear UIs for reviewing and authorizing activities
+   - 用户必须明确知晓并同意所有数据访问和操作
+   - 用户必须保留对共享数据和执行操作的控制权
+   - 实现者应提供清晰的UI界面供用户审查和授权活动
 
-2. **Data Privacy**
+2. **数据隐私**
 
-   - Hosts must obtain explicit user consent before exposing user data to servers
-   - Hosts must not transmit resource data elsewhere without user consent
-   - User data should be protected with appropriate access controls
+   - 主机在向服务端暴露用户数据前必须获得明确授权
+   - 未经用户同意，主机不得将资源数据传输至其他位置
+   - 应采用适当的访问控制措施保护用户数据
 
-3. **Tool Safety**
+3. **工具安全**
 
-   - Tools represent arbitrary code execution and must be treated with appropriate
-     caution
-   - Hosts must obtain explicit user consent before invoking any tool
-   - Users should understand what each tool does before authorizing its use
+   - 工具代表任意代码执行，必须谨慎对待
+   - 主机在调用任何工具前必须获得用户明确授权
+   - 用户应在授权使用前了解每个工具的具体功能
 
-4. **LLM Sampling Controls**
-   - Users must explicitly approve any LLM sampling requests
-   - Users should control:
-     - Whether sampling occurs at all
-     - The actual prompt that will be sent
-     - What results the server can see
-   - The protocol intentionally limits server visibility into prompts
+4. **LLM采样控制**
+   - 用户必须明确批准所有LLM采样请求
+   - 用户应控制：
+     - 是否允许采样
+     - 实际发送的提示词内容
+     - 服务端可见的结果范围
+   - 协议特意限制了服务端对提示词的可见性
 
-### Implementation Guidelines
+### 实现指南
 
-While MCP itself cannot enforce these security principles at the protocol level,
-implementors **SHOULD**:
+虽然MCP本身无法在协议层面强制实施这些安全原则，但实现者**SHOULD**：
 
-1. Build robust consent and authorization flows into their applications
-2. Provide clear documentation of security implications
-3. Implement appropriate access controls and data protections
-4. Follow security best practices in their integrations
-5. Consider privacy implications in their feature designs
+1. 在应用中构建完善的授权流程
+2. 提供清晰的安全影响说明文档
+3. 实施适当的访问控制和数据保护措施
+4. 在集成中遵循安全最佳实践
+5. 在功能设计中充分考虑隐私影响
 
-## Learn More
+## 了解更多
 
-Explore the detailed specification for each protocol component:
+探索各协议组件的详细规范：
 
 <CardGroup cols={5}>
-  <Card title="Architecture" icon="sitemap" href="architecture" />
-  <Card title="Base Protocol" icon="code" href="basic" />
-  <Card title="Server Features" icon="server" href="server" />
-  <Card title="Client Features" icon="user" href="client" />
-  <Card title="Contributing" icon="pencil" href="contributing" />
+  <Card title="架构" icon="sitemap" href="architecture" />
+  <Card title="基础协议" icon="code" href="basic" />
+  <Card title="服务端特性" icon="server" href="server" />
+  <Card title="客户端特性" icon="user" href="client" />
+  <Card title="贡献" icon="pencil" href="contributing" />
 </CardGroup>
