--- a/docs/specification/2024-11-05/server/prompts.mdx
+++ b/docs/specification/2024-11-05/server/prompts.mdx
@@ -3,33 +3,25 @@ title: Prompts
 weight: 10
 ---
 
-<Info>**Protocol Revision**: 2024-11-05</Info>
+<Info>**协议修订版本**：2024-11-05</Info>
 
-The Model Context Protocol (MCP) provides a standardized way for servers to expose prompt
-templates to clients. Prompts allow servers to provide structured messages and
-instructions for interacting with language models. Clients can discover available
-prompts, retrieve their contents, and provide arguments to customize them.
+模型上下文协议（MCP）为服务端提供了一种标准化方式，使其能够向客户端暴露提示词模板。通过提示词，服务端可以为大模型交互提供结构化消息和指令。客户端可发现可用提示词、获取其内容，并通过参数进行自定义配置。
 
-## User Interaction Model
+## 用户交互模型
 
-Prompts are designed to be **user-controlled**, meaning they are exposed from servers to
-clients with the intention of the user being able to explicitly select them for use.
+提示词设计遵循**用户可控**原则，即服务端向客户端暴露提示词的目的是让用户能够显式选择使用。
 
-Typically, prompts would be triggered through user-initiated commands in the user
-interface, which allows users to naturally discover and invoke available prompts.
+通常，提示词会通过用户界面中的主动命令触发，这种设计让用户可以自然地发现并调用可用提示词。
 
-For example, as slash commands:
+例如以下斜杠命令形式：
 
 ![Example of prompt exposed as slash command](slash-command.png)
 
-However, implementors are free to expose prompts through any interface pattern that suits
-their needs&mdash;the protocol itself does not mandate any specific user interaction
-model.
+但实现者可根据实际需求自由选择交互方式——协议本身并不强制规定具体的用户交互模型。
 
-## Capabilities
+## 能力声明
 
-Servers that support prompts **MUST** declare the `prompts` capability during
-[initialization](/specification/2024-11-05/basic/lifecycle#initialization):
+支持提示词功能的服务端**必须**在[初始化阶段](/specification/2024-11-05/basic/lifecycle#initialization)声明`prompts`能力：
 
 ```json
 {
@@ -41,18 +33,15 @@ Servers that support prompts **MUST** declare the `prompts` capability during
 }
 ```
 
-`listChanged` indicates whether the server will emit notifications when the list of
-available prompts changes.
+`listChanged`用于标识服务端是否会在可用提示词列表变更时发送通知。
 
-## Protocol Messages
+## 协议消息
 
-### Listing Prompts
+### 获取提示词列表
 
-To retrieve available prompts, clients send a `prompts/list` request. This operation
-supports
-[pagination](/specification/2024-11-05/server/utilities/pagination).
+客户端通过发送`prompts/list`请求获取可用提示词，该操作支持[分页机制](/specification/2024-11-05/server/utilities/pagination)。
 
-**Request:**
+**请求：**
 
 ```json
 {
@@ -65,7 +54,7 @@ supports
 }
 ```
 
-**Response:**
+**响应：**
 
 ```json
 {
@@ -90,12 +79,11 @@ supports
 }
 ```
 
-### Getting a Prompt
+### 获取单个提示词
 
-To retrieve a specific prompt, clients send a `prompts/get` request. Arguments may be
-auto-completed through [the completion API](/specification/2024-11-05/server/utilities/completion).
+客户端通过发送`prompts/get`请求获取特定提示词，参数可通过[自动补全API](/specification/2024-11-05/server/utilities/completion)实现自动填充。
 
-**Request:**
+**请求：**
 
 ```json
 {
@@ -111,7 +99,7 @@ auto-completed through [the completion API](/specification/2024-11-05/server/uti
 }
 ```
 
-**Response:**
+**响应：**
 
 ```json
 {
@@ -132,10 +120,9 @@ auto-completed through [the completion API](/specification/2024-11-05/server/uti
 }
 ```
 
-### List Changed Notification
+### 列表变更通知
 
-When the list of available prompts changes, servers that declared the `listChanged`
-capability **SHOULD** send a notification:
+当可用提示词列表发生变化时，已声明`listChanged`能力的服务端**应当**发送通知：
 
 ```json
 {
@@ -144,7 +131,7 @@ capability **SHOULD** send a notification:
 }
 ```
 
-## Message Flow
+## 消息流程
 
 ```mermaid
 sequenceDiagram
@@ -167,26 +154,24 @@ sequenceDiagram
     end
 ```
 
-## Data Types
+## 数据类型
 
-### Prompt
+### 提示词定义
 
-A prompt definition includes:
+每个提示词包含以下要素：
+- `name`：提示词唯一标识符
+- `description`：可选的人类可读描述
+- `arguments`：可选的自定义参数列表
 
-- `name`: Unique identifier for the prompt
-- `description`: Optional human-readable description
-- `arguments`: Optional list of arguments for customization
+### 提示词消息
 
-### PromptMessage
+提示词消息可包含以下内容：
+- `role`："user"或"assistant"标识发言者身份
+- `content`：下列内容类型之一：
 
-Messages in a prompt can contain:
+#### 文本内容
 
-- `role`: Either "user" or "assistant" to indicate the speaker
-- `content`: One of the following content types:
-
-#### Text Content
-
-Text content represents plain text messages:
+文本内容表示纯文字消息：
 
 ```json
 {
@@ -195,11 +180,11 @@ Text content represents plain text messages:
 }
 ```
 
-This is the most common content type used for natural language interactions.
+这是自然语言交互中最常用的内容类型。
 
-#### Image Content
+#### 图像内容
 
-Image content allows including visual information in messages:
+图像内容允许在消息中包含视觉信息：
 
 ```json
 {
@@ -209,12 +194,11 @@ Image content allows including visual information in messages:
 }
 ```
 
-The image data **MUST** be base64-encoded and include a valid MIME type. This enables
-multi-modal interactions where visual context is important.
+图像数据**必须**采用base64编码并包含有效MIME类型，这对于需要视觉上下文的多模态交互至关重要。
 
-#### Embedded Resources
+#### 嵌入式资源
 
-Embedded resources allow referencing server-side resources directly in messages:
+嵌入式资源允许在消息中直接引用服务端资源：
 
 ```json
 {
@@ -227,31 +211,26 @@ Embedded resources allow referencing server-side resources directly in messages:
 }
 ```
 
-Resources can contain either text or binary (blob) data and **MUST** include:
+资源可包含文本或二进制数据，且**必须**包含：
+- 有效资源URI
+- 正确的MIME类型
+- 文本内容或base64编码的二进制数据
 
-- A valid resource URI
-- The appropriate MIME type
-- Either text content or base64-encoded blob data
+该功能使得提示词能够无缝集成服务端管理的内容（如文档、代码示例等参考材料）到对话流程中。
 
-Embedded resources enable prompts to seamlessly incorporate server-managed content like
-documentation, code samples, or other reference materials directly into the conversation
-flow.
+## 错误处理
 
-## Error Handling
+服务端**应当**针对以下常见错误返回标准JSON-RPC错误码：
+- 无效提示词名称：`-32602`（参数无效）
+- 缺少必要参数：`-32602`（参数无效）
+- 内部错误：`-32603`（内部错误）
 
-Servers **SHOULD** return standard JSON-RPC errors for common failure cases:
+## 实现建议
 
-- Invalid prompt name: `-32602` (Invalid params)
-- Missing required arguments: `-32602` (Invalid params)
-- Internal errors: `-32603` (Internal error)
+1. 服务端**应当**在处理前验证提示词参数
+2. 客户端**应当**对大型提示词列表实现分页处理
+3. 双方**应当**遵循能力协商机制
 
-## Implementation Considerations
+## 安全规范
 
-1. Servers **SHOULD** validate prompt arguments before processing
-2. Clients **SHOULD** handle pagination for large prompt lists
-3. Both parties **SHOULD** respect capability negotiation
-
-## Security
-
-Implementations **MUST** carefully validate all prompt inputs and outputs to prevent
-injection attacks or unauthorized access to resources.
+实现方**必须**严格验证所有提示词的输入输出，防止注入攻击或对资源的未授权访问。
