--- a/docs/specification/2024-11-05/server/utilities/pagination.mdx
+++ b/docs/specification/2024-11-05/server/utilities/pagination.mdx
@@ -2,30 +2,24 @@
 title: Pagination
 ---
 
-<Info>**Protocol Revision**: 2024-11-05</Info>
+<Info>**协议修订版本**: 2024-11-05</Info>
 
-The Model Context Protocol (MCP) supports paginating list operations that may return
-large result sets. Pagination allows servers to yield results in smaller chunks rather
-than all at once.
+模型上下文协议（MCP）支持对可能返回大量结果集的列表操作进行分页处理。分页机制允许服务端以较小数据块的形式返回结果，而非一次性返回全部数据。
 
-Pagination is especially important when connecting to external services over the
-internet, but also useful for local integrations to avoid performance issues with large
-data sets.
+当通过互联网连接外部服务时，分页机制尤为重要。同时对于本地集成场景，该机制也能有效避免大数据集导致的性能问题。
 
-## Pagination Model
+## 分页模型
 
-Pagination in MCP uses an opaque cursor-based approach, instead of numbered pages.
+MCP采用基于不透明游标的分页方案，而非传统的页码分页方式：
 
-- The **cursor** is an opaque string token, representing a position in the result set
-- **Page size** is determined by the server, and clients **MUST NOT** assume a fixed page
-  size
+- **游标**是一个不透明的字符串令牌，代表结果集中的特定位置
+- **分页大小**由服务端决定，客户端**禁止**假定固定分页尺寸
 
-## Response Format
+## 响应格式
 
-Pagination starts when the server sends a **response** that includes:
-
-- The current page of results
-- An optional `nextCursor` field if more results exist
+当服务端发送的**响应**包含以下内容时，即触发分页机制：
+- 当前页的结果数据
+- 可选字段 `nextCursor`（当存在更多结果时）
 
 ```json
 {
@@ -38,10 +32,9 @@ Pagination starts when the server sends a **response** that includes:
 }
 ```
 
-## Request Format
+## 请求格式
 
-After receiving a cursor, the client can _continue_ paginating by issuing a request
-including that cursor:
+客户端在获取游标后，可通过在请求中包含该游标来**继续**分页操作：
 
 ```json
 {
@@ -53,7 +46,7 @@ including that cursor:
 }
 ```
 
-## Pagination Flow
+## 分页流程
 
 ```mermaid
 sequenceDiagram
@@ -67,32 +60,29 @@ sequenceDiagram
     end
 ```
 
-## Operations Supporting Pagination
+## 支持分页的操作
 
-The following MCP operations support pagination:
+以下MCP操作支持分页机制：
+- `resources/list` - 列出可用资源
+- `resources/templates/list` - 列出资源模板
+- `prompts/list` - 列出可用提示词
+- `tools/list` - 列出可用工具
 
-- `resources/list` - List available resources
-- `resources/templates/list` - List resource templates
-- `prompts/list` - List available prompts
-- `tools/list` - List available tools
+## 实现指南
 
-## Implementation Guidelines
+1. 服务端**应当**：
+   - 提供稳定的游标
+   - 妥善处理无效游标
 
-1. Servers **SHOULD**:
+2. 客户端**应当**：
+   - 将缺失的 `nextCursor` 字段视为结果终止标志
+   - 同时支持分页与非分页流程
 
-   - Provide stable cursors
-   - Handle invalid cursors gracefully
+3. 客户端**必须**将游标视为不透明令牌：
+   - 不可对游标格式做任何假设
+   - 不可尝试解析或修改游标
+   - 不可跨会话持久化游标
 
-2. Clients **SHOULD**:
+## 错误处理
 
-   - Treat a missing `nextCursor` as the end of results
-   - Support both paginated and non-paginated flows
-
-3. Clients **MUST** treat cursors as opaque tokens:
-   - Don't make assumptions about cursor format
-   - Don't attempt to parse or modify cursors
-   - Don't persist cursors across sessions
-
-## Error Handling
-
-Invalid cursors **SHOULD** result in an error with code -32602 (Invalid params).
+无效游标**应当**返回-32602错误代码（参数无效）。
