--- a/docs/specification/contributing.mdx
+++ b/docs/specification/contributing.mdx
@@ -1,17 +1,18 @@
 ---
-title: "Contributions"
+title: 贡献
 weight: 20
 cascade:
   type: docs
 breadcrumbs: false
 ---
 
-We welcome contributions from the community! Please review our
-[contributing guidelines](https://github.com/modelcontextprotocol/specification/blob/main/CONTRIBUTING.md)
-for details on how to submit changes.
+我们热忱欢迎社区贡献！请查阅
+[贡献指南](https://github.com/modelcontextprotocol/specification/blob/main/CONTRIBUTING.md)
+了解如何提交变更的具体流程。
 
-All contributors must adhere to our
-[Code of Conduct](https://github.com/modelcontextprotocol/specification/blob/main/CODE_OF_CONDUCT.md).
+所有贡献者必须遵守我们的
+[行为准则](https://github.com/modelcontextprotocol/specification/blob/main/CODE_OF_CONDUCT.md)。
 
-For questions and discussions, please use
-[GitHub Discussions](https://github.com/modelcontextprotocol/specification/discussions).
+如有疑问或需要讨论，请使用
+[GitHub Discussions](https://github.com/modelcontextprotocol/specification/discussions)
+进行交流。
