--- a/docs/quickstart/client.mdx
+++ b/docs/quickstart/client.mdx
@@ -366,7 +366,6 @@ uv run client.py C:\\projects\\mcp-server\\weather.py
 - `Tool execution failed`：验证工具所需环境变量  
 - `Timeout error`：考虑增加客户端超时设置  
 
-</Tab>  
 
 ```bash MacOS/Linux
 # Create project directory
@@ -738,8 +737,6 @@ node build/index.js C:\\projects\\mcp-server\\build\\index.js
 - `ANTHROPIC_API_KEY is not set`：检查.env文件与环境变量  
 - `TypeError`：确认工具参数类型正确  
 
-</Tab>  
-
 <Note>
 This is a quickstart demo based on Spring AI MCP auto-configuration and boot starters.
 To learn how to create sync and async MCP Clients manually, consult the [Java SDK Client](/sdk/java/mcp-client) documentation
@@ -904,7 +901,6 @@ WebFlux应用可使用：
 
 提供相似功能但采用WebFlux-based SSE传输实现，推荐生产环境使用。  
 
-</Tab>  
 
 ```bash
 java --version
@@ -1277,7 +1273,6 @@ java -jar build/libs/client.jar C:\\projects\\mcp-server\\build\\libs\\server.ja
 - `Tool execution failed`：验证工具所需环境变量  
 - `ANTHROPIC_API_KEY is not set`：检查环境变量  
 
-</Tab>  
 
 ```bash
 dotnet new console -n QuickstartClient
@@ -1425,12 +1420,8 @@ If you're continuing the weather tutorial from the server quickstart, your comma
   <img src="/images/quickstart-dotnet-client.png" />
 </Frame>  
 
-</Tab>  
-
-</Tabs>  
-
 ## 后续步骤  
-
+<CardGroup>
   <Card
     title="Example servers"
     icon="grid"
