--- a/docs/specification/2024-11-05/basic/index.mdx
+++ b/docs/specification/2024-11-05/basic/index.mdx
@@ -29,7 +29,7 @@ MCP客户端与服务器之间的所有通信**必须**遵循[JSON-RPC 2.0](http
 这种分层设计在确保关注点分离的同时，实现了客户端与服务端间的丰富交互。模块化架构允许实现方按需支持特定功能。
 
 各组件详细说明请参阅以下页面：
-
+<CardGroup>
   <Card title="Sampling" icon="code" href="/specification/2024-11-05/client/sampling" />
 </CardGroup>
 
