--- a/docs/specification/2024-11-05/server/index.mdx
+++ b/docs/specification/2024-11-05/server/index.mdx
@@ -19,6 +19,6 @@ title: 概述
 | Tools     | Model-controlled       | Functions exposed to the LLM to take actions       | API POST requests, file writing |
 
 下方将深入探讨这些关键组件：
-
+<CardGroup>
   <Card title="Tools" icon="wrench" href="tools" />
 </CardGroup>
